--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.6",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "fusioncharts": "^3.15.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
+    "react-fusioncharts": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.0"
   },
